<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, Login!</string>
	<string name="app_name">Thread扫码支付客户端</string>
	<string name="user_name">用户名：</string>
	<string name="user_pass">密码：</string>
	<string name="login">登录</string>
	<string name="add">添加</string>
	<string name="cancel">取消</string>
	<string name="welcome">欢迎使用Thread淘宝客户端</string>
	<string name="item_name">商品名称：</string>
	<string name="item_desc">商品描述：</string>
	<string name="remark">商品备注：</string>
	
	<string name="item_price">商品价格：</string>
	<string name="user_info">个人信息</string>
	<string name="gender">性别</string>
	<string name="username">用户名</string>
	<string name="real_name">真实姓名</string>
	<string name="user_signature">签名</string>
	
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    
    
	<string name="activity_remote_service_binding">AppDemo4</string>
	<string name="remote_call_failed">Failure calling remote service</string>
       
	<string name="partnerHint">"partner"</string>
	<string name="sellerHint">"seller"</string>
	<string name="out_trade_noHint">"out_trade_no"</string>
	<string name="subjectHint">"subject"</string>
	<string name="bodyHint">"body"</string>
	<string name="total_feeHint">"total_fee"</string>
	<string name="notify_urlHint">"notify_url"</string>
	<string name="charsetHint">"charset"</string>
	<string name="signTypeHint">"signType"</string>
	
	<string name="confirm_install_hint">"安装提示"</string>	
	<string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
	
	
	<string name="Ensure">"确定"</string>
	<string name="register">"注册"</string>
	<string name="Cancel">"取消"</string>
	<string name="check_sign_failed">您的订单信息已被非法篡改。</string>
</resources>
