<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:stretchColumns="1"
	android:gravity="center">

<TextView
	android:text="@string/welcome"
	android:id="@+id/TextView"
	android:textSize="@dimen/label_font_size"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:gravity="center"
	android:padding="@dimen/title_padding"
	/>	
<!-- 输入用户名的行 -->
<TableRow>
<TextView
	android:text="@string/user_name"
	android:id="@+id/TextView"
	android:textSize="@dimen/label_font_size"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"/>
<EditText
	android:text=""
	android:id="@+id/userEditText"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"/>
</TableRow>
<!-- 输入密码的行 -->
<TableRow>
<TextView
	android:text="@string/user_pass"
	android:id="@+id/TextView"
	android:textSize="@dimen/label_font_size"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"/>
<EditText
	android:text=""
	android:id="@+id/pwdEditText"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:password="true"/>
</TableRow>
<!-- 定义登录、取消按钮的行 -->

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/bnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/bnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
    <Button
        android:id="@+id/bnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register" />
</LinearLayout>

</TableLayout>
